--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,7 @@ dependencies {
 
     // prometheus
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 }
 
