fix: metrics 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: *
-  #        include: health, prometheus
+        include: health, prometheus
   endpoint:
     prometheus:
       enabled: true
