--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,18 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
+  endpoint:
+    prometheus:
+      enabled: true
+    env:
+      enabled: true
+    health:
+      show-details: always
+  security:
+    enabled: false
+
 spring:
   jackson:
     time-zone: Asia/Seoul
