--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,10 +91,14 @@ services:
     restart: always
     ports:
       - "6379:6379"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - redis_data:/data
 
 volumes:
   minio_data:
+    driver: local
+  redis_data:
     driver: local
