--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,11 +96,13 @@ services:
     restart: always
     ports:
       - "6379:6379"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     networks:
       - playhive-net
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - redis_data:/data
 
 networks:
   playhive-net:
@@ -108,4 +110,6 @@ networks:
 
 volumes:
   minio_data:
+    driver: local
+  redis_data:
     driver: local
