--- a/monitoring/docker-compose.monitoring.yml
+++ b/monitoring/docker-compose.monitoring.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
     networks:
       - playhive-net
     ports:
@@ -29,3 +30,4 @@ networks:
 
 volumes:
   grafana_data:
+  prometheus_data:
