--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -89,59 +89,27 @@ jobs:
               echo "Java is already installed."
             fi
 
-      - name: Deploy to AWS and Restart Services with Docker Compose
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Copy green.yml + deploy.sh
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.PROD_AWS_SERVER_IP }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
-          script: |
-            # 이동할 디렉토리 설정
-            DEPLOY_DIR=~/play-hive
+          source: |
+            deploy/docker-compose.green.yml
+            deploy/deploy.sh
+          target: ~/play-hive/deploy/
 
-            echo "Navigating to deployment directory: $DEPLOY_DIR"
-            cd $DEPLOY_DIR || exit
-
-            # 최신 Docker 및 Docker Compose 설치 확인
-            echo "Ensuring Docker and Docker Compose are installed..."
-            
-            # Docker 설치 여부 확인
-            if ! docker --version &>/dev/null; then
-              echo "Docker is not installed. Installing Docker..."
-              sudo apt-get update
-              sudo apt-get install -y docker.io
-              sudo systemctl start docker
-              sudo systemctl enable docker
-            else
-              echo "Docker is already installed."
-            fi
-            
-            # Docker Compose 설치 여부 확인
-            if ! docker-compose --version &>/dev/null; then
-              echo "Docker Compose is not installed. Installing Docker Compose..."
-              sudo apt-get update
-              sudo apt-get install -y docker-compose
-            else
-              echo "Docker Compose is already installed."
-            fi
-
-            # 기존 컨테이너 중지 및 제거
-            echo "Stopping and removing existing containers..."
-            sudo docker-compose down || true
-            
-            # 최신 이미지를 가져오기
-            echo "Pulling the latest Docker image..."
-            sudo docker-compose pull
-            
-            # 컨테이너 재실행
-            echo "Starting containers with Docker Compose..."
-            sudo docker-compose up -d
-            
-            # 사용하지 않는 이미지 제거
-            echo "Removing unused Docker images..."
-            sudo docker image prune -f
-            
-            echo "Deployment completed successfully!"
+        - name: Run deploy.sh remotely
+          uses: appleboy/ssh-action@v0.1.10
+          with:
+            host: ${{ secrets.PROD_AWS_SERVER_IP }}
+            username: ${{ secrets.AWS_USERNAME }}
+            key: ${{ secrets.PROD_SSH_PRIVATE_KEY }}
+            script: |
+              cd ~/play-hive/deploy
+              chmod +x deploy.sh
+              ./deploy.sh
 
       - name: Health Check After Deployment
         run: |
