--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,19 +90,19 @@ services:
       - playhive-net
     restart: always
 
-  redis:
-    image: redis:latest
-    container_name: ${REDIS_HOST}
-    restart: always
-    ports:
-      - "6379:6379"
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
-    networks:
-      - playhive-net
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-    volumes:
-      - redis_data:/data
+#  redis:
+#    image: redis:latest
+#    container_name: ${REDIS_HOST}
+#    restart: always
+#    ports:
+#      - "6379:6379"
+#    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+#    networks:
+#      - playhive-net
+#    environment:
+#      - REDIS_PASSWORD=${REDIS_PASSWORD}
+#    volumes:
+#      - redis_data:/data
 
 networks:
   playhive-net:
@@ -111,5 +111,5 @@ networks:
 volumes:
   minio_data:
     driver: local
-  redis_data:
-    driver: local
+#  redis_data:
+#    driver: local
