--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,15 @@ services:
     volumes:
       - redis_data:/data
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.1
+    container_name: es
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+
 networks:
   playhive-net:
     external: true
