--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
     active: dev
-    include: auth, mail, swagger
+    include: auth, mail, swagger, es
   application:
     name: myteam-server
