chore: 배치서버에서도 참조 가능하도록

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,7 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - network.host=0.0.0.0
     ports:
       - "9200:9200"
 
