--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,13 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+
+    //blaze persistence
+    implementation("com.blazebit:blaze-persistence-integration-querydsl-expressions-jakarta:1.6.15")
+    implementation("com.blazebit:blaze-persistence-integration-hibernate-6.2:1.6.15")
+    implementation("com.blazebit:blaze-persistence-core-impl-jakarta:1.6.15")
+
+
 }
 
 test {
