--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,15 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+
+    //query dsl에서는 union연산같은걸 지원하지않아서 넣었습니다.
+    implementation("com.blazebit:blaze-persistence-integration-querydsl-expressions-jakarta:1.6.15")
+    implementation("com.blazebit:blaze-persistence-integration-hibernate-6.2:1.6.15")
+    implementation("com.blazebit:blaze-persistence-core-impl-jakarta:1.6.15")
+
+
+    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+
 }
 
 test {
